force-app/main/default/objects/Deal_Team__c/Deal_Team__c.object-meta.xml
<CustomObject>
    <description>This is used by the Product Build team to show the TAD team members who are involved in the deal.</description>
    <label>Deal Team</label>
    <nameField>
        <displayFormat>DTM-{0000}</displayFormat>
        <label>Deal Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>