force-app/main/default/objects/Deal_Team__c/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <formula>text( Deal__r.Deal_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Status</label>
    <type>Text</type>
</CustomField>