force-app/main/default/objects/Deal_Team__c/fields/Deal_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Role__c</fullName>
    <inlineHelpText>Please select the role for this team member.</inlineHelpText>
    <label>Deal Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDM</fullName>
            </value>
            <value>
                <fullName>Content_publishing</fullName>
                <label>Content &amp; publishing</label>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Flight Ticketer</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product Analyst</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>