force-app/main/default/objects/Deal_Team__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the team member&apos;s name from this lookup field.</inlineHelpText>
    <label>Team Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.PortalType</field>
            <operation>notEqual</operation>
            <value>Customer Portal, Partner Portal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>